# feedly-saved-entries-processor

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: workflow.yml
feedly_saved_entries_processor/: __init__.py  __main__.py  config_loader.py  feedly_client.py  main.py  processor_factory.py  rule_matcher.py
feedly_saved_entries_processor/entry_processors/: __init__.py  base_entry_processor.py  log_entry_processor.py  log_only_entry_processor.py  todoist_entry_processor.py
tests/: __init__.py  test_config_loader.py  test_dummy.py  test_feedly_client.py  test_main.py  test_processor_factory.py  test_rule_matcher.py
tests/entry_processors/: __init__.py  test_log_entry_processor.py  test_todoist_entry_processor.py
tests/test_configs/: invalid_processor_config.yaml  invalid_schema.yaml  invalid_structure.yaml  invalid_yaml.yaml  valid_config.yaml
